# electronjs-with-rust-performance

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
electron-js-app/: .eslintrc.json  .prettierrc  README.md  forge.config.js  ormconfig.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js
electron-js-app/scripts/: make.bat
electron-js-app/src/: index.html  index.ts  renderer.ts
electron-js-app/src/@types/Global/: index.d.ts
electron-js-app/src/@types/electron-redux/: index.d.ts
electron-js-app/src/components/App/: index.tsx
electron-js-app/src/components/SearchByNames/: index.tsx
electron-js-app/src/components/SearchTaller/: index.tsx  style.css
electron-js-app/src/db/: connection.ts  index.ts
electron-js-app/src/db/movies/: index.ts
electron-js-app/src/entity/: ImdbMovie.ts  ImdbName.ts  ImdbRatings.ts  ImdbTitlePrincipal.ts
electron-js-app/src/migration/: 1596206186863-initTables.ts
electron-js-app/src/store/: rootReducer.ts
electron-js-app/src/store/createStore/: main.ts  renderer.ts
electron-js-app/src/store/movies/: actions.ts  reducer.ts  sagas.ts  selectors.ts  types.ts
electron-js-app/src/utils/: memoryUsage.ts  types.ts
electron-neon-app/: .env.example  .gitignore  README.md  forge.config.js  package-lock.json  package.json  tsconfig.json
electron-neon-app/scripts/: init.bat  init.sh
electron-neon-app/src/: index.html  index.ts  renderer.tsx
electron-neon-app/src/components/App/: style.css
electron-neon-app/src/components/Root/: index.tsx
electron-neon-app/src/entity/: ImdbRatings.ts
electron-neon-app/src/store/: index.ts  rootSaga.ts
electron-neon-app/src/utils/: error.ts  installElectronExtensions.ts
electron-neon-app/webpack/: externals.js
neon-bindings/: .eslintrc  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
neon-bindings/native/: Cargo.toml
neon-bindings/native/src/: config.rs  helpers.rs  lib.rs
neon-bindings/native/src/bindings/: mod.rs
neon-bindings/native/src/bindings/movies/: mod.rs  tasks.rs
neon-bindings/scripts/: build-package-json.js
neon-bindings/src/: index.ts  init.ts  main.ts  movies.ts  types.ts  utils.ts
neon-bindings/tests/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
neon-bindings/tests/src/: movies.test.ts  setupTests.ts
rust-core/: .env.example  Cargo.toml  README.md  diagram.mdj
rust-core/migrations/2020-07-26-174059_create_tables/: down.sql  up.sql
rust-core/migrations/2020-07-27-191022_create_tables/: down.sql  up.sql
rust-core/scripts/: init.bat  init.sh
rust-core/src/: db.rs  lib.rs  models.rs  movies.rs  schema.rs  types.rs
rust-core/src/dsl/: mod.rs  movies.rs  ratings.rs
rust-core/src/helpers/: mod.rs  position.rs  role.rs  teamid.rs
rust-core/tests/: movies.rs
rust-core/tests/common/: mod.rs
wasm/: Cargo.toml  LICENSE_MIT  README.md
wasm/src/: lib.rs
(+11 files in other folders)
