[package]
name = "rust-core"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "1.4"
dotenv = "0.15"
libsqlite3-sys = { version = ">=0.8.0, <0.19.0", optional = true, features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
snafu = "0.6"
rayon = "1.3"
