[package]
name = "rust-core"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
edition = "2018"

[features]
default = []
parallel = ["rayon", "diesel/r2d2"]
bundled = ["libsqlite3-sys/bundled"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4", features = ["sqlite", "64-column-tables"] }
diesel_migrations = "1.4"
dotenv = "0.15"
libsqlite3-sys = { version = ">=0.8.0, <0.19.0", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
snafu = "0.6"
rayon = { version = "1.3", optional = true }
