[package]
name = "neon-bindings"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
# neon = { git = "https://github.com/neon-bindings/neon.git" }
neon = "0.4.0"
