[package]
name = "neon-bindings"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4"
neon-serde = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
snafu = "0.6"
rust-core = { path = "../../rust-core", features = ["parallel"] }
